# corpus-pipeline

./: .env.example  .gitignore  README.md  manual_upload_preprocessing.ipynb  pyproject.toml  requirements.txt
config/: language.yaml  models.yaml  pipeline.yaml  terms.yaml
configs/: classification.yaml  classification_labels.yaml  collectors.yaml  keywords.yaml  language_detection.yaml  preprocessing.yaml  schema.yaml
data/classified/: ai_healthcare_classified_2026-05-03T14-42-37.284747Z.csv
data/language_detected/: language_detected_2026-05-04T05-25-14.451929Z.csv
data/manual_uploads/: facebook.csv
data/processed/: normalized_text_rows_2026-05-03T14-26-40.319096Z.csv  normalized_text_rows_2026-05-04T02-43-40.171375Z.csv
data/raw/: manual_csv_scraped.csv  reddit_scraped.csv  youtube_scraped.csv
data/registry/: collected_ids.csv
inputs/: README.md  keywords.csv  reddit_ids.csv  subreddits.csv  twitter_ids.csv  youtube_ids.csv
logs/collectors/: run_summary_2026-05-03T10-46-58.666167Z.json
scripts/: fasttext.ipynb
src/: contracts.py
src/classification/: ai_healthcare_classifier.py  prefilter.py  prompts.py
src/collectors/: base.py  manual_csv.py  reddit_praw.py  youtube_data.py
src/config/: keywords.py
src/etl_pipeline/: __init__.py  cli.py
src/language/: __init__.py  ensemble.py  openai_fallback.py
src/orchestration/: run_classification.py  run_collectors.py  (+2 more)
tests/: test_costs.py  test_extraction_checkpointing.py  test_ids.py  test_inputs.py  test_manual_upload.py  test_prompts.py  test_terms.py  test_text.py  test_transform.py
(+46 files in other folders)
